Fixed project alignment

--- a/engineer_page/static/eng_index_style.css
+++ b/engineer_page/static/eng_index_style.css
@@ -161,8 +161,6 @@ color: black;
 
   .my-gallery-container {
     display: flex;
-    flex: 1 1 300px;
-    max-width: 400px;
     text-align: center;
   }
 
